# bbgo-python

./: README.md  pyproject.toml
.github/workflows/: python.yml
bbgo/: services.py  stream.py
bbgo/data/: event.py
bbgo/handlers/: balance.py  book.py  kline.py  order.py  ticker.py
examples/: query_klines.py  stream.py  subscribe.py  subscribe_user_data.py
