[tool.poetry]
name = "bbgo"
version = "0.1.9"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]
packages = [
    { include = "bbgo" },
    { include = "bbgo_pb2.py" },
    { include = "bbgo_pb2_grpc.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
loguru = "^0.6.0"
grpcio = "^1.44.0"
grpcio-tools = "^1.44.0"
flake8 = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"bbgo_pb2.py" = ["ALL"]
"bbgo_pb2_grpc.py" = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
